# hark

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TECH_DEBT.md  bee-project.yml  deploy-frontend-to-souffle.sh  deploy-to-souffle.sh  package.json  sync-to-souffle.sh
.claude/: launch.json  settings.local.json
.config/tracey/: config.styx
HarkInput/: HarkInputAppDelegate.swift  HarkInputController.swift  HarkXPCDelegate.swift  Info.plist  harkTemplate.tiff  main.tiff
asr-synth/: Cargo.toml
asr-synth/data/: eval_sentences.jsonl
asr-synth/training/: train.sh  (+1 more)
bee/: AppState.swift  AudioEngine.swift  BeeApp.swift  Session.swift
bee-input/: BeeInputController.swift  BeeXPCService.swift  Info.plist
bee.xcodeproj/: project.pbxproj
beeml-web/: index.html  package.json  pnpm-lock.yaml
build-debug/: info.plist
docs/: beeml-correction-system.md  phonetic-retrieval-implementation-checklist.md
hark/: AppState.swift  harkApp.swift
hark-dash/: index.html  package.json
hark.xcodeproj/: project.pbxproj
harm-dash/: vite.config.ts
qwen3-asr-mlx-rs/: Cargo.toml
rust/bee-qwen3-asr/: Cargo.toml
rust/bee-qwen3-asr/src/: asr_engine.rs  decoder.rs  encoder.rs  forced_aligner.rs  generate.rs  load.rs  mel.rs  model.rs  mrope.rs  streaming.rs  weights.rs
rust/beeml/: Cargo.toml
rust/beeml/src/: judge.rs  lib.rs  main.rs  region_proposal.rs  rpc.rs
scripts/: deploy.sh  dev-beeml.mjs  install-bee.sh
spec/: state.md
swift/: bee-project.yml
whisper/: AppState.swift  whisper-Bridging-Header.h  whisperApp.swift
whisper.xcodeproj/: project.pbxproj
(+177 files in other folders)
